# advent-of-code-2022

./: Cargo.toml  README.md  cargo.toml
scripts/: create.sh  run.sh
solutions/day-01-part-1/: Cargo.toml
solutions/day-01-part-1/src/: main.rs
solutions/day-01-part-2/: Cargo.toml
solutions/day-01-part-2/src/: main.rs
solutions/day-02-part-1/: Cargo.toml
solutions/day-02-part-1/src/: main.rs
solutions/day-02-part-2/: Cargo.toml
solutions/day-02-part-2/src/: main.rs
solutions/day-03-part-1/: Cargo.toml
solutions/day-03-part-1/src/: main.rs
solutions/day-03-part-2/: Cargo.toml
solutions/day-03-part-2/src/: main.rs
solutions/day-04-part-1/: Cargo.toml
solutions/day-04-part-1/src/: main.rs
solutions/day-04-part-2/: Cargo.toml
solutions/day-04-part-2/src/: main.rs
solutions/day-05-part-1/: Cargo.toml
solutions/day-05-part-1/src/: main.rs
solutions/day-05-part-2/: Cargo.toml
solutions/day-05-part-2/src/: main.rs
solutions/day-06-part-1/: Cargo.toml
solutions/day-06-part-1/src/: main.rs
solutions/day-06-part-2/: Cargo.toml
solutions/day-06-part-2/src/: main.rs
solutions/day-07-part-1/: Cargo.toml
solutions/day-07-part-1/src/: main.rs
solutions/day-07-part-2/: Cargo.toml
solutions/day-07-part-2/src/: main.rs
solutions/day-08-part-1/: Cargo.toml
solutions/day-08-part-1/src/: main.rs
solutions/day-08-part-2/: Cargo.toml
solutions/day-08-part-2/src/: main.rs
solutions/day-09-part-1/: Cargo.toml
solutions/day-09-part-1/src/: main.rs
solutions/day-09-part-2/: Cargo.toml
util/: Cargo.toml
util/src/: lib.rs
(+1 files in other folders)
