[workspace]

members = [
    "./util",
    "./solutions/day-01-part-1",
    "./solutions/day-01-part-2",
    "./solutions/day-02-part-1",
    "./solutions/day-02-part-2",
    "./solutions/day-03-part-1",
    "./solutions/day-03-part-2",
    "./solutions/day-04-part-1",
    "./solutions/day-04-part-2",
    "./solutions/day-06-part-1",
    "./solutions/day-06-part-2",
    "./solutions/day-05-part-1",
    "./solutions/day-05-part-2",
    "./solutions/day-08-part-1",
    "./solutions/day-08-part-2",
    "./solutions/day-09-part-1",
    "./solutions/day-09-part-2",
]
